fix this longstanding padding issue on pills
- hadn't touched this shit for almost a year, not exactly sure when the
  padding changed, but it definitely didn't used to look like:
https://cloud.githubusercontent.com/assets/137793/6319257/530ee148-ba83-11e4-969c-8749535e71d6.png
- hopefully my fix doesn't look like balls anywhere

--- a/app/styles/components/_stations_list.scss
+++ b/app/styles/components/_stations_list.scss
@@ -143,6 +143,9 @@ ul.station-filters {
     }
 
     .dir {
+      display: inline-block;
+      padding-top: 3px;
+
       color: white;
       background-color: gray;
       font-weight: bold;
@@ -155,6 +158,9 @@ ul.station-filters {
     }
 
     .time {
+      display: inline-block;
+      padding-top: 3px;
+
       background-color: transparent;
 
       border-width: 1px;
